# Mono-DB

./: .dockerignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  config.toml  index.html  rustfmt.toml  sitemap.xml  tasks.py  zipper.sh
.gitea/workflows/: ci.yml
.zed/: settings.json
assets/css/: styles.c06e9e62.css
assets/js/: 01a85c17.000e50a1.js  0b1ac180.3884fa02.js  0e384e19.13aa89c9.js  17896441.1146ccbf.js  1df93b7f.4c6dba96.js  237.abc4addd.js  36994c47.5b68f3b9.js  388ad625.a91c33e4.js  49b2b3d6.a4ad0838.js  4d1b6a6f.963327c3.js  518.1414a18f.js  589.ac811e1a.js  5e95c892.6283216e.js  621db11d.c4af989f.js  6875c492.d4c4aabf.js  814f3328.04134937.js  8ab76908.87e1d28a.js  9e4087bc.58c82834.js  a6aa9e1f.9c7d2044.js  a7456010.5791d5c5.js  a7bd4aaa.2c06fd6d.js  a825611a.2265bc7e.js  a94703ab.17eb7c83.js  a951fea5.25051733.js  aba21aa0.a08dca72.js  acecf23e.0c71a178.js  acf87bcd.03d549c1.js  b06f2d89.6b55c1b1.js  bc197ef8.0f79dffa.js  ccc49370.c963226c.js  d589d3a7.669e6fd5.js  e4318bb3.b3a9231b.js  e43bc735.8da27562.js  main.92a2a1f6.js  runtime~main.b09cd570.js
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/tags/: index.html
blog/tags/announcement/: index.html
blog/tags/monodb/: index.html
blog/welcome/: index.html
core/: Cargo.toml
core/src/: error.rs  lib.rs  main.rs
core/src/executor/: engine.rs  error.rs  mod.rs  result.rs  storage.rs
core/src/memory/: manager.rs  mod.rs
core/src/network/: connection.rs  mod.rs  protocol.rs
core/src/nsql/: error.rs  interner.rs  mod.rs
core/src/nsql/ast/: mod.rs
core/src/nsql/parser/: error.rs  lexer.rs  mod.rs  parser.rs
core/src/nsql/tests/: parser_tests.rs
core/src/server/: connection_manager.rs  database_server.rs  mod.rs
core/src/storage/: buffer_pool.rs  catalog.rs  disk.rs  engine.rs  index.rs  mod.rs  page.rs  table.rs  transaction.rs  wal.rs
crates/monodb-admin/: Cargo.toml
crates/monodb-admin/src/: actions.rs  constants.rs  main.rs
crates/monodb-admin/src/components/: app.rs  button.rs  dialog.rs  icon.rs  mod.rs  sidebar.rs  titlebar.rs
crates/monodb-admin/src/theme/: fonts.rs  mod.rs  palette.rs
crates/monodb-admin/src/utils/: linux.rs  macos.rs  mod.rs  windows.rs
crates/monodb-client/: Cargo.toml
crates/monodb-client/src/: connection.rs  lib.rs  pool.rs  results.rs
crates/monodb-common/: Cargo.toml  protocol.md
crates/monodb-common/benches/: protocol_codec.rs
crates/monodb-common/src/: error.rs  lib.rs  permissions.rs  protocol.rs  schema.rs  value.rs
crates/monodb-common/src/tests/: mod.rs  value_tests.rs
crates/monodb-plugin/: Cargo.toml
crates/monodb-plugin/src/: bindings.rs  component_cache.rs  config.rs  database_impl.rs  function_registry.rs  host.rs  lib.rs  output_store.rs  registry.rs  state.rs  tasks.rs  value_bridge.rs  watcher.rs
crates/monodb-plugin/wit/: database.wit  plugin.wit  types.wit
crates/monodb-repl/: Cargo.toml
crates/monodb-repl/src/: commands.rs  format.rs  formatter.rs  main.rs
crates/monodb-server/: Cargo.toml  build.rs  storage-format.md  wal.md
crates/monodb-server/src/: config.rs  lib.rs  main.rs  namespace.rs
crates/monodb-server/src/auth/: bootstrap.rs  mod.rs  token.rs  user.rs
crates/monodb-server/src/daemon/: config.rs  mod.rs  tls.rs
crates/monodb-server/src/network/: mod.rs  session.rs
crates/monodb-server/src/query_engine/: ast.rs  builtins.rs  cache.rs  executor.rs  lexer.rs  logical_plan.rs  mod.rs  parser.rs  physical_plan.rs  planner.rs  storage.rs  tests.rs
crates/monodb-server/src/query_engine/tests/: executor_tests.rs  lexer_parser_tests.rs  mod.rs  param_tests.rs
crates/monodb-server/src/storage/: btree.rs  buffer.rs  buffer_pool.rs  buffer_pool_tests.rs  disk.rs  disk_manager.rs  document.rs  engine.rs  key_encoding.rs  keyspace.rs  mod.rs  models.rs  mvcc.rs  page.rs  schema.rs  traits.rs  wal.rs  wal_tests.rs
crates/monodb-server/src/storage/btree/: delete.rs  insert.rs  mod.rs  node.rs  search.rs  tests.rs
crates/monodb-server/src/storage/lsm/: bloom_filter.rs  compaction.rs  merge_iterator.rs  mod.rs  sstable.rs
crates/monodb-utils/: Cargo.toml
crates/monodb-utils/src/: mdb_ready.rs
crates/testing/: Cargo.toml  examples.ql  users.ql
crates/testing/benches/: btree.rs
crates/testing/src/: db.rs  encrypt.rs  lib.rs  main.rs  utils.rs
dev/: pyproject.toml
dev/source/: authentication.rst  conf.py  index.rst  permissions.rst  protocol.rst  query-engine.rst  query-language.rst  storage.rst  tls.rst
docs/: query-parameters-implementation.md
docs/api/network-protocol/: index.html
docs/architecture/overview/: index.html
docs/getting-started/: index.html
docs/intro/: index.html
docs/nsql-reference/: index.html
driver/: Cargo.toml
driver/src/: lib.rs
examples/: example.sql
gui/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
gui/public/grammars/: monodb.tmLanguage.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
gui/src/components/: ConnectionPanel.tsx  EditorToolbar.tsx  Header.tsx  QueryEditor.tsx  QueryTabs.tsx  QueryWorkspace.tsx  Resizer.tsx  ResultsPanel.tsx  ResultsTable.tsx  Sidebar.tsx  StatusBar.tsx  TabManager.tsx  TableViewer.tsx  TreeView.tsx
gui/src/hooks/: useDatabase.ts  useQueryExecution.ts  useQueryTable.ts
gui/src/lib/: mockData.ts
gui/src/services/: DatabaseDriver.ts
gui/src/types/: database.ts
monodb-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
monodb-docs/blog/: authors.yml  welcome.md
monodb-docs/docs/: getting-started.md  intro.md  nsql-reference.md
playground/common/: CMakeLists.txt
playground/common/include/: protocol.h  value.h
playground/common/src/: protocol.c  value.c
playground/common/tests/: test.c
repl/: Cargo.toml
repl/src/: commands.rs  completer.rs  display.rs  history.rs  main.rs  prompt.rs
(+34 files in other folders)
