[package]
name = "mono_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "monod"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"
crc32fast = "1.3"
memmap2 = "0.9"
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20.0"
pest = "2.7"
pest_derive = "2.7"
bitvec = "1.0.1"
bumpalo = "3.17.0"
colored = "3.0.0"
rustyline = "16.0.0"
smallvec = "1.15.0"
string-interner = "0.19.0"
hex = "0.4.3"
async-trait = "0.1"
lazy_static = "1.4"
regex = "1.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3.31"
tokio-util = "0.7.15"
comfy-table = "7.1.1"

[features]
default = []

[dev-dependencies]
pretty_assertions = "1.4.1"
