[package]
name = "monodb-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"] # Define as rust-lib only (no FFI)

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
tokio.workspace = true
thiserror = "2.0.17"
sha1 = "0.10.6"
indexmap.workspace = true
base64 = "0.22.1"
bytes.workspace = true
rkyv = "0.8.12"
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "protocol_codec"
harness = false