[package]
name = "monodb-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0.17"
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
rand.workspace = true
sha1 = "0.10.6"
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
rustls = "0.23.35"
