[package]
name = "monodb-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
monodb-common = { path = "../monodb-common", default-features = false }
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
indexmap.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
parking_lot.workspace = true
memmap2.workspace = true
notify.workspace = true
