[package]
name = "monodb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "monod"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dashmap.workspace = true
bytes.workspace = true
serde_json.workspace = true
indexmap.workspace = true
uuid.workspace = true
monodb-common = { path = "../monodb-common" }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
crc32fast = "1.5.0"
bincode.workspace = true
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
murmur3 = "0.5.2"
parking_lot = "0.12.5"
crossbeam-skiplist = "0.1.3"
toml = "0.9.8"
memchr = "2.7.6"
smallvec = "1.15.1"
phf = "0.13.1"
annotate-snippets = "0.12.8"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.15.0"

[build-dependencies]
phf_codegen = "0.13.1"
