[package]
name = "monodb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "monod"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
dashmap.workspace = true
rustls = "0.23.35"
serde.workspace = true
tokio-rustls = "0.26.4"
monodb-common = { path = "../monodb-common" }
toml = "0.9.10"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
bytes.workspace = true
