[package]
name = "monodb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "monod"
path = "src/main.rs"

[features]
default = ["plugins"]
plugins = ["monodb-plugin"]

[dependencies]
tokio.workspace = true
dashmap.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
serde.workspace = true
monodb-common = { path = "../monodb-common" }
monodb-plugin = { path = "../monodb-plugin", optional = true }
toml = "0.9.8"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
bytes.workspace = true
uuid.workspace = true
rand.workspace = true
ahash.workspace = true
indexmap.workspace = true
serde_json.workspace = true
crc32fast = "1.4"
parking_lot = "0.12"
memmap2 = "0.9"
crossbeam-channel = "0.5"
phf = "0.13.1"
memchr = "2.7"
smallvec = "1.13"
annotate-snippets = "0.12.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
argon2 = { version = "0.5", features = ["std"] }

[build-dependencies]
phf_codegen = "0.13.1"

[dev-dependencies]
tempfile = "3.10"
