[package]
name = "testing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monodb-common = { path = "../monodb-common" }
monodb-client = { path = "../monodb-client" }
# monodb-server = { path = "../monodb-server" }
tokio.workspace = true
anyhow.workspace = true
futures = "0.3.31"
comfy-table = "7.2.1"
# tracing.workspace = true
# tracing-subscriber.workspace = true
# tracing-appender.workspace = true
# bytes.workspace = true
# indexmap.workspace = true
# annotate-snippets.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "btree"
harness = false
