[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
monodb-common = { path = "../monodb-common" }
monodb-client = { path = "../monodb-client" }
