[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
monodb-common = { path = "../monodb-common" }
monodb-client = { path = "../monodb-client" }
memmap2.workspace = true
parking_lot.workspace = true
crc32fast = "1.5.0"
tempfile = "3.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4"
rand.workspace = true
fake = "4.4.0"
get-size = { version = "0.1.4", features = ["derive"] }
indexmap.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
text_io = "0.1.13"
chacha20poly1305 = "0.10.1"
inquire = "0.9.2"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
